# lora_fine_tuning

./: .env.example  README.md  config.yaml  full_out_subject.txt  lora_pefr_out_subject.txt  mkdocs.yml  pyproject.toml
docs/notebooks/: bert_encoder_full_ft.ipynb  bert_encoder_lora_peft.ipynb
docs/project-guide/: project-guide.md
src/: hello.py
src/lora_ft_subject_chunks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/svlearn_lora_ft/: bert_full_ft_trainer.py  bert_lora_peft_trainer.py
